--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>clover</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui"><link href=/static/css/app.c94014bcfd50820d200b135b2a01c22c.css rel=stylesheet></head><body><div id=app><router-view></router-view></div><script type=text/javascript src=/static/js/manifest.b8aa1c55ac66c8ff6c3d.js></script><script type=text/javascript src=/static/js/vendor.1d414a03f15a548f8957.js></script><script type=text/javascript src=/static/js/app.d67c5c8606a0b1488377.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset=utf-8>
+  <title>clover</title>
+  <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
+  <link href=static/css/app.c94014bcfd50820d200b135b2a01c22c.css rel=stylesheet>
+</head>
+
+<body>
+  <div id=app>
+    <router-view></router-view>
+  </div>
+  <script type=text/javascript src=static/js/manifest.b8aa1c55ac66c8ff6c3d.js></script>
+  <script type=text/javascript src=static/js/vendor.1d414a03f15a548f8957.js></script>
+  <script type=text/javascript src=tatic/js/app.d67c5c8606a0b1488377.js></script>
+</body>
+
+</html>
