--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   <script type=text/javascript src=static/js/manifest.b8aa1c55ac66c8ff6c3d.js></script>
   <script type=text/javascript src=static/js/vendor.1d414a03f15a548f8957.js></script>
-  <script type=text/javascript src=tatic/js/app.d67c5c8606a0b1488377.js></script>
+  <script type=text/javascript src=static/js/app.d67c5c8606a0b1488377.js></script>
 </body>
 
 </html>
