--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset=utf-8>
-  <title>clover</title>
-  <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
-  <link href=static/css/app.c94014bcfd50820d200b135b2a01c22c.css rel=stylesheet>
-</head>
-
-<body>
-  <div id=app>
-    <router-view></router-view>
-  </div>
-  <script type=text/javascript src=static/js/manifest.b8aa1c55ac66c8ff6c3d.js></script>
-  <script type=text/javascript src=static/js/vendor.1d414a03f15a548f8957.js></script>
-  <script type=text/javascript src=static/js/app.d67c5c8606a0b1488377.js></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>clover</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui"><link href=/static/css/app.4b179dd548c0ce1e2d9615804cbb2ae5.css rel=stylesheet></head><body><div id=app><router-view></router-view></div><script type=text/javascript src=/static/js/manifest.06441f097b78e52ba26d.js></script><script type=text/javascript src=/static/js/vendor.92c9ae0b4ddde99e3e73.js></script><script type=text/javascript src=/static/js/app.abb1cf1efa08b0f114e2.js></script></body></html>
