--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title>clover</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-</head>
-
-<body>
-  <div id="app">
-    <router-view></router-view>
-  </div>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>clover</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui"><link href=/static/css/app.b4d6d3a130c785635d5799286de4b27a.css rel=stylesheet></head><body><div id=app><router-view></router-view></div><script type=text/javascript src=/static/js/manifest.3dd20127389f2979e3e8.js></script><script type=text/javascript src=/static/js/vendor.05db2457542e0d41caa0.js></script><script type=text/javascript src=/static/js/app.057c3cdad61ce38945f7.js></script></body></html>
