--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset=utf-8>
   <title>clover</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
 </head>
 
-<body>
-  <div id=app>
-    <router-view></router-view>
+<body ontouchstart="">
+  <div id="app">
+    <router-view transition="slide"></router-view>
   </div>
 </body>
 
